--- a/packages/event-service/package.json
+++ b/packages/event-service/package.json
@@ -17,7 +17,7 @@
     "lib"
   ],
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "start": "node src/index.js"
   },
   "dependencies": {
     "express": "^4.17.3"
