Adiciona service de criação de usuário

--- a/packages/user-service/.eslintrc.json
+++ b/packages/user-service/.eslintrc.json
@@ -7,7 +7,8 @@
     "airbnb-base",
     "plugin:@typescript-eslint/recommended",
     "plugin:prettier/recommended",
-    "prettier"
+    "prettier",
+    "plugin:import/typescript"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -33,7 +34,9 @@
     "@typescript-eslint/no-unused-vars": ["error", {
       "argsIgnorePattern": "_"
     }],
-    "prettier/prettier": "error"
+    "prettier/prettier": "error",
+    "import/no-unresolved": "off",
+    "no-useless-constructor": "off"
   },
   "settings": {
     "import/resolver": {
