--- a/packages/user-service/package.json
+++ b/packages/user-service/package.json
@@ -9,14 +9,7 @@
   "author": "guilhermeaw <guilherme.w@universo.univates.br>",
   "homepage": "https://github.com/guilhermeaw/event-manager-backend#readme",
   "license": "ISC",
-  "main": "lib/user-service.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
+  "main": "src/shared/server.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/guilhermeaw/event-manager-backend.git"
@@ -32,6 +25,7 @@
     "url": "https://github.com/guilhermeaw/event-manager-backend/issues"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
@@ -46,6 +40,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.3"
   }
 }
