--- a/packages/user-service/package.json
+++ b/packages/user-service/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "eslint": "8.2.0",
@@ -44,6 +45,7 @@
     "class-transformer": "^0.5.1",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.3",
     "typeorm": "0.3.5"
   }
