--- a/packages/event-service/package.json
+++ b/packages/event-service/package.json
@@ -8,19 +8,33 @@
   "author": "guilhermeaw <guilherme.w@universo.univates.br>",
   "homepage": "",
   "license": "ISC",
-  "main": "lib/event-service.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "lib"
-  ],
+  "main": "src/shared/server.ts",
   "scripts": {
-    "dev:server": "node src/index.js"
+    "build": "tsc",
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only --no-notify --ignore-watch node_modules src/shared/server.ts",
+    "typeorm": "ts-node-dev --transpile-only ./node_modules/typeorm/cli.js",
+    "migration:run": "typeorm-ts-node-commonjs -d src/shared/database/ormconfig.ts migration:run",
+    "migration:revert": "typeorm-ts-node-commonjs -d src/shared/database/ormconfig.ts migration:revert"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@typescript-eslint/eslint-plugin": "^5.19.0",
+    "@typescript-eslint/parser": "^5.19.0",
+    "eslint": "8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.6.2",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.3"
   },
   "dependencies": {
-    "express": "^4.17.3"
-  },
-  "type": "module"
+    "class-transformer": "^0.5.1",
+    "express": "^4.17.3",
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.7.3",
+    "typeorm": "0.3.5"
+  }
 }
