Adiciona provider do gmail para envio de emails

--- a/packages/email-service/tsconfig.json
+++ b/packages/email-service/tsconfig.json
@@ -12,6 +12,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "strictPropertyInitialization": false,
+    "allowJs": true,
     "paths": {
       "@modules/*": ["modules/*"],
       "@config/*": ["config/*"],
