--- a/packages/email-service/package.json
+++ b/packages/email-service/package.json
@@ -32,6 +32,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "nodemailer": "^6.7.3"
