--- a/packages/certificate-service/package.json
+++ b/packages/certificate-service/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "axios": "^0.26.1",
+    "class-transformer": "^0.5.1",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.3",
