Adiciona botão de opções no cabeçalho

--- a/packages/client/.eslintrc.json
+++ b/packages/client/.eslintrc.json
@@ -46,7 +46,8 @@
       {
         "namedComponents": "arrow-function"
       }
-    ]
+    ],
+    "no-shadow": "off"
   },
   "settings": {
     "import/resolver": {
