--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -19,37 +19,38 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mui/material": "^5.6.2",
+    "@mui/icons-material": "5.6.2",
+    "@mui/material": "5.6.2",
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
-    "@react-pdf/renderer": "^2.1.1",
-    "axios": "^0.26.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-query": "^3.35.0",
-    "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
+    "@react-pdf/renderer": "2.1.1",
+    "axios": "0.26.1",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-query": "3.35.0",
+    "react-router-dom": "6.3.0",
+    "styled-components": "5.3.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/react-query": "^1.2.9",
-    "@types/styled-components": "^5.1.25",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
-    "@vitejs/plugin-react": "^1.3.0",
+    "@types/react": "18.0.0",
+    "@types/react-dom": "18.0.0",
+    "@types/react-query": "1.2.9",
+    "@types/styled-components": "5.1.25",
+    "@typescript-eslint/eslint-plugin": "5.19.0",
+    "@typescript-eslint/parser": "5.19.0",
+    "@vitejs/plugin-react": "1.3.0",
     "eslint": "8.2.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-import-resolver-typescript": "2.7.1",
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-jsx-a11y": "6.5.1",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
-    "prettier": "^2.6.2",
-    "typescript": "^4.6.3",
-    "vite": "^2.9.2",
-    "vite-plugin-shim-react-pdf": "^1.0.5"
+    "prettier": "2.6.2",
+    "typescript": "4.6.3",
+    "vite": "2.9.2",
+    "vite-plugin-shim-react-pdf": "1.0.5"
   },
   "resolutions": {
     "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest"
