--- a/packages/event-service/package.json
+++ b/packages/event-service/package.json
@@ -17,6 +17,7 @@
     "migration:revert": "typeorm-ts-node-commonjs -d src/shared/database/ormconfig.ts migration:revert"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
@@ -32,6 +33,8 @@
   },
   "dependencies": {
     "class-transformer": "^0.5.1",
+    "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.3",
