--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,24 +20,24 @@
   },
   "dependencies": {
     "@mui/material": "^5.6.2",
-    "@mui/styled-engine": "npm:@mui/styled-engine-sc@latest",
+    "@mui/styled-engine": "^5.6.1",
     "@react-pdf/renderer": "^2.1.1",
     "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-query": "^3.35.0",
+    "react-query": "^3.38.0",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.0",
     "@types/react-query": "^1.2.9",
     "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "eslint": "8.2.0",
+    "eslint": "^8.14.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.5.0",
     "eslint-import-resolver-typescript": "^2.7.1",
@@ -48,7 +48,7 @@
     "eslint-plugin-react-hooks": "4.3.0",
     "prettier": "^2.6.2",
     "typescript": "^4.6.3",
-    "vite": "^2.9.2",
+    "vite": "^2.9.5",
     "vite-plugin-shim-react-pdf": "^1.0.5"
   },
   "resolutions": {
