--- a/packages/client/.eslintrc.json
+++ b/packages/client/.eslintrc.json
@@ -47,7 +47,8 @@
         "namedComponents": "arrow-function"
       }
     ],
-    "no-shadow": "off"
+    "no-shadow": "off",
+    "camelcase": "off"
   },
   "settings": {
     "import/resolver": {
