--- a/packages/email-service/package.json
+++ b/packages/email-service/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.7",
     "nodemailer": "^6.7.3"
   }
 }
