--- a/packages/event-service/package.json
+++ b/packages/event-service/package.json
@@ -32,6 +32,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "axios": "^0.26.1",
     "class-transformer": "^0.5.1",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
