--- a/packages/certificate-service/package.json
+++ b/packages/certificate-service/package.json
@@ -20,6 +20,7 @@
     "migration:revert": "typeorm-ts-node-commonjs -d src/shared/database/ormconfig.ts migration:revert"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
@@ -36,6 +37,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "class-transformer": "^0.5.1",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "pg": "^8.7.3",
